Add 'add to cart' feature, complete login, signup and signout auth using firebase

--- a/src/services/services.css
+++ b/src/services/services.css
@@ -28,3 +28,33 @@
     margin-top: 5px;
     color: #444;
 }
+
+@media only screen and (max-width: 992px) {
+    .services__item span i{
+        font-size: 1.8rem;
+        padding: 5px;
+    }
+    .services__item h3{
+        font-size: 1rem;
+    }
+    .services__item{
+        padding: 10px;
+        margin-bottom: 1.5rem;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    
+    .services__item span i{
+        font-size: 1.5rem;
+        padding: 5px;
+    }
+    
+}
+
+@media only screen and (max-width: 576px) {
+    
+    .services__item{
+        padding: 20px;
+    }    
+}
