--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -45,10 +45,48 @@
     color: var(--primary-color);
     cursor: pointer;
 }
-.nav__icons span img{
+.nav__icons .profile img{
     width: 40px;
     height: 40px;
     cursor: pointer;
+    border-radius: 50%;
+}
+
+.nav__icons .profile{
+    position: relative;
+    z-index: 9;
+}
+
+.nav__icons .profile .profile__actions{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 150px;
+    z-index: 10;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: var(--card-bg-01);
+    line-height: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.show__profileActions{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 150px;
+    z-index: 10;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: var(--card-bg-01);
+    line-height: 30px;
+    cursor: pointer;
+    display: block;
 }
 .cart__icon .fav__icon{
     position: relative;
@@ -74,4 +112,72 @@
 }
 .nav__active{
     font-weight: 600 !important;
+}
+
+.sticky__header{
+    width: 100%;
+    height: 70px;
+    line-height: 70px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    box-shadow: 3px 3px 8px -3px #ddd;
+    background: var(--hero-bg);
+}
+
+@media only screen and (max-width: 768px) {
+    .navigation{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba((0, 0, 0, 0.53));
+        z-index: 9999;
+        display: none;
+    }
+    .menu{
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 250px;
+        height: 100%;
+        z-index: 99999;
+        background: #fff;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .active__menu{
+        display: block;
+    }
+    .mobile__menu{
+        display: block;
+    }
+
+    .mobile__menu span i{
+        font-style: 1.1rem !important;
+    }
+
+    .logo img{
+        width: 1rem;
+        height: 1rem;
+    }
+    .logo h1{
+        font-size: 1rem;
+    }
+    .fav__icon i, .cart__icon i{
+        font-size: 1.2rem !important;
+    }
+
+    .nav__icons span img{
+        width: 1.4rem;
+        height: 1.4rem;
+    }
+    .header{
+        width: 100%;
+        height: 60px;
+        line-height: 60px;
+    }
 }
